F17 - Replaced PriorityQueue with PriorityBlockingQueue in TaskManager for safer thread operations. Replaced depreciated URL from java.net with URI in InternetConnection